feat(paste): finalize authorization and production interface
